--- a/public/back/login.html
+++ b/public/back/login.html
@@ -45,7 +45,7 @@
 </div>
 
 
-
+<script src="lib/jquery/jquery.min.js"></script>
 <script src="lib/bootstrap/js/bootstrap.js"></script>
 <script src="lib/bootstrap-validator/js/bootstrapValidator.js"></script>
 <script src="js/login.js"></script>
